--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,51 +1,51 @@
 <% layout('layouts/boilerplate')%>
 <div class="row">
-    <h1 class="text-center">Edit Campground</h1>
+    <h1 class="text-center">تعديل الاستراحة</h1>
     <div class="col-md-6 offset-md-3">
         <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST" novalidate class="validated-form"
             enctype="multipart/form-data">
             <div class="mb-3">
-                <label class="form-label" for="title">Title</label>
+                <label class="form-label" for="title">الاسم</label>
                 <input class="form-control" type="text" id="title" name="campground[title]"
                     value="<%=campground.title %>" required>
                 <div class="valid-feedback">
-                    Looks good!
+                    رائع!
                 </div>
             </div>
             <div class="mb-3">
-                <label class="form-label" for="location">Location</label>
+                <label class="form-label" for="location">الموقع</label>
                 <input class="form-control" type="text" id="location" name="campground[location]"
                     value="<%=campground.location %>" required>
                 <div class="valid-feedback">
-                    Looks good!
+                    رائع!
                 </div>
             </div>
 
             <div class="mb-3">
-                <label class="form-label" for="price">Campground Price</label>
+                <label class="form-label" for="price">السعر</label>
                 <div class="input-group">
-                    <span class="input-group-text" id="price-label">$</span>
+                    <span class="input-group-text" id="price-label">SR</span>
                     <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price"
                         aria-describedby="price-label" name="campground[price]" value="<%=campground.price %>"
                         required>\<div class="valid-feedback">
-                        Looks good!
+                        رائع!
                     </div>
                 </div>
             </div>
 
             <div class="mb-3">
-                <label class="form-label" for="description">Description</label>
+                <label class="form-label" for="description">الوصف</label>
                 <textarea class="form-control" type="text" id="description" name="campground[description]"
                     required><%= campground.description%></textarea>
                 <div class="valid-feedback">
-                    Looks good!
+                    رائع!
                 </div>
             </div>
             <div class="mb-3">
                 <div class="form-file custom-file">
                     <input type="file" class="form-file-input" id="image" name="image" multiple>
                     <label class="form-file-label" for="image">
-                        <span class="form-file-text custom-file-label">Add more image(s)...</span>
+                        <span class="form-file-text custom-file-label">اضف صور</span>
                         <span class="form-file-button">Browse</span>
                     </label>
                 </div>
@@ -57,14 +57,14 @@
                 <div class="form-check-inline">
                     <input type="checkbox" id="image-<%=i%>" name="deleteImages[]" value="<%=img.filename%>">
                 </div>
-                <label for="image-<%=i%>">Delete?</label>
+                <label for="image-<%=i%>">حذف؟</label>
                 <% })%>
             </div>
             <div class="mb-3">
-                <button class="btn btn-info">Update Campground</button>
+                <button class="btn btn-info">تعديل الاستراحة</button>
             </div>
         </form>
-        <a href="/campgrounds/<%= campground._id%>">Back To Campground</a>
+        <a href="/campgrounds/<%= campground._id%>" class="btn btn-lg btn-info font-weight-bold border-info bg-info">العودة للاستراحة</a>
 
     </div>
 </div>
