--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,20 +1,20 @@
 <% layout('layouts/boilerplate')%>
 <div class="row">
-    <h1 class="text-center">New Campground</h1>
+    <h1 class="text-center">اضف استراحة</h1>
     <div class="col-md-6 offset-md-3">
         <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
             <div class="mb-3">
-                <label class="form-label" for="title">Title</label>
+                <label class="form-label" for="title">الاسم</label>
                 <input class="form-control" type="text" id="title" name="campground[title]" required>
                 <div class="valid-feedback">
-                    Looks good!
+                    رائع!
                 </div>
             </div>
             <div class="mb-3">
-                <label class="form-label" for="location">Location</label>
+                <label class="form-label" for="location">الموقع</label>
                 <input class="form-control" type="text" id="location" name="campground[location]" required>
                 <div class="valid-feedback">
-                    Looks good!
+                    رائع!
                 </div>
             </div>
 
@@ -22,42 +22,42 @@
                 <label class="form-label" for="image">Image Url</label>
                 <input class="form-control" type="text" id="image" name="campground[image]" required>
                 <div class="valid-feedback">
-                    Looks good!
+                    رائع!
                 </div>
             </div> -->
             <div class="mb-3">
-                <label class="form-label" for="price">Campground Price</label>
+                <label class="form-label" for="price">السعر</label>
                 <div class="input-group">
-                    <span class="input-group-text" id="price-label">$</span>
+                    <span class="input-group-text" id="price-label">SR</span>
                     <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price"
                         aria-describedby="price-label" name="campground[price]" required>
                 </div>
                 <div class="valid-feedback">
-                    Looks good!
+                    رائع!
                 </div>
             </div>
 
             <div class="mb-3">
-                <label class="form-label" for="description">Description</label>
+                <label class="form-label" for="description">الوصف</label>
                 <textarea class="form-control" type="text" id="description" name="campground[description]"
                     required></textarea>
                 <div class="valid-feedback">
-                    Looks good!
+                    رائع!
                 </div>
             </div>
             <div class="mb-3">
                 <div class="form-file custom-file">
                     <input type="file" class="form-file-input" id="image" name="image" multiple>
                     <label class="form-file-label" for="image">
-                        <span class="form-file-text custom-file-label">Choose image(s)...</span>
+                        <span class="form-file-text custom-file-label">اختر صور...</span>
                         <span class="form-file-button">Browse</span>
                     </label>
                 </div>
             </div>
             <div class="mb-3">
-                <button class="btn btn-success">Add Campground</button>
+                <button class="btn btn-success">اضافة</button>
             </div>
         </form>
-        <a href="/campgrounds">All Campgrounds</a>
+        <a href="/campgrounds" class="btn btn-lg btn-success font-weight-bold border-success bg-success">العودة للاستراحات</a>
     </div>
 </div>
