--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -6,30 +6,30 @@
                 <img src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80"
                     alt="" class="card-img-top" />
                 <div class="card-body">
-                    <h5 class="card-title">Register</h5>
+                    <h5 class="card-title">تسجيل الدخول</h5>
                     <form action="/register" method="POST" class="validated-form" novalidate>
                         <div class="mb-3">
-                            <label class="form-label" for="username">Username</label>
+                            <label class="form-label" for="username">اسم المستخدم</label>
                             <input class="form-control" type="text" id="username" name="username" required autofocus>
                             <div class="valid-feedback">
-                                Looks good!
+                                رائع!
                             </div>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label" for="email">Email</label>
+                            <label class="form-label" for="email">البريد الالكتروني</label>
                             <input class="form-control" type="email" id="email" name="email" required>
                             <div class="valid-feedback">
-                                Looks good!
+                                رائع
                             </div>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label" for="password">Password</label>
+                            <label class="form-label" for="password">كلمة المرور</label>
                             <input class="form-control" type="password" id="password" name="password" required>
                             <div class="valid-feedback">
-                                Looks good!
+                                رائع
                             </div>
                         </div>
-                        <button class="btn btn-success btn-block">Register</button>
+                        <button class="btn btn-success btn-block">تسجيل الدخول</button>
                     </form>
 
                 </div>
