--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,8 +26,7 @@
             </div>
         </header>
         <main class="px-3">
-            <h1>استراحات</h1>
-            <p class="lead"> مرحبا بك في استراحات ! </p>
+            <h1>مرحبا بك في استراحات !</h1>
             <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">الذهاب للاستراحات</a>
         </main>
 
