--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,7 +9,7 @@
             <div class="navbar-nav">
                 <a class="nav-link" href="/">الرئيسية</a>
                 <a class="nav-link" href="/campgrounds">الاستراحات</a>
-                <a class="nav-link" href="/campgrounds/new">اضف استراحة</a>
+                <a class="nav-link" href="/campgrounds/new">أضف استراحة</a>
             </div>
             <div class="navbar-nav ml-auto">
                 <% if(!currentUser) {%>
