--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,6 +1,7 @@
 <% layout('layouts/boilerplate')%>
 <div id="cluster-map"></div>
-<div class="container">
+<div class="container mt-5">
+    <h1 class="text-center">كل الاستراحات</h1>
 
     <% for (let campground of campgrounds){%>
     <div class="card mb-3">
@@ -21,7 +22,7 @@
                     <p class="card-text">
                         <small class="text-muted"><%= campground.location%></small>
                     </p>
-                    <a class="btn btn-primary" href="/campgrounds/<%=campground._id%>">View <%=campground.title%></a>
+                    <a class="btn btn-primary" href="/campgrounds/<%=campground._id%>">انظر <%=campground.title%></a>
                 </div>
             </div>
         </div>
