--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate')%>
 <div class="row">
-    <h1 class="text-center">اضف استراحة</h1>
-    <div class="col-md-6 offset-md-3">
+    <h1 class="text-center">أضف استراحة</h1>
+    <div class="col-md-6 mx-auto">
         <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="title">الاسم</label>
@@ -55,9 +55,9 @@
                 </div>
             </div>
             <div class="mb-3">
-                <button class="btn btn-success">اضافة</button>
+                <button class="btn btn-success">إضافة</button>
             </div>
         </form>
-        <a href="/campgrounds" class="btn btn-lg btn-success font-weight-bold border-success bg-success">العودة للاستراحات</a>
+        <a href="/campgrounds" class="btn btn-success font-weight-bold border-success bg-success">العودة للاستراحات</a>
     </div>
 </div>
