modified login and register

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,8 +17,8 @@
                 <h3 class="float-md-left mb-0">استراحات</h3>
                 <nav class="nav nav-masthead justify-content-center float-md-right">
                     <% if(!currentUser) { %>
-                    <a class="nav-link" href="/login">التسجيل</a>
-                    <a class="nav-link" href="/register">تسجيل الدخول</a>
+                    <a class="nav-link" href="/login">تسجيل الدخول</a>
+                    <a class="nav-link" href="/register">تسجيل</a>
                     <% } else { %>
                     <a class="nav-link" href="/logout">خروج</a>
                     <% } %>
