--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -6,7 +6,7 @@
                 <img src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80"
                     alt="" class="card-img-top" />
                 <div class="card-body">
-                    <h5 class="card-title">تسجيل الدخول</h5>
+                    <h5 class="card-title">تسجيل</h5>
                     <form action="/register" method="POST" class="validated-form" novalidate>
                         <div class="mb-3">
                             <label class="form-label" for="username">اسم المستخدم</label>
@@ -29,7 +29,7 @@
                                 رائع
                             </div>
                         </div>
-                        <button class="btn btn-success btn-block">تسجيل الدخول</button>
+                        <button class="btn btn-success btn-block">تسجيل</button>
                     </form>
 
                 </div>
