--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -13,8 +13,8 @@
             </div>
             <div class="navbar-nav ml-auto">
                 <% if(!currentUser) {%>
-                <a class="nav-link" href="/login">التسجيل</a>
-                <a class="nav-link" href="/register">تسجيل الدخول</a>
+                <a class="nav-link" href="/login">تسجيل الدخول</a>
+                <a class="nav-link" href="/register">تسجيل</a>
                 <% } else {%>
                 <a class="nav-link" href="/logout">خروج</a>
                 <% } %>
